global: fix tooltip overlapping due to bad z-index

--- a/discord.user.styl
+++ b/discord.user.styl
@@ -2240,4 +2240,7 @@
       display: none;
     }
   }
+
+  // * Global -> Fix tooltips z-index.
+  [class*="popouts-"] ~ [class*="layerContainer-"] { z-index: 999 !important }
 }
